--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ body{
 .popupbox{
     
     display: none;
-    min-width: 40%;
-    max-width: 40%;
+    min-width: 200px;
+    max-width: 300px;
     padding: 50px;
     position: fixed;
     left: 20%;
@@ -45,7 +45,7 @@ body{
     bottom: 30%;
     margin: auto;
     z-index: 10;
-    background-color:rgb(0, 0, 0);
+    background-color:rgb(55, 55, 55);
     color: white;
     border-radius: 50px;
 }
